# navigator-data-ingest

./: .gitignore  .pre-commit-config.yaml  Dockerfile  HOW_TO_UPDATE_TESTS.md  Makefile  README.md  format_jsons.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  retag-and-push.sh
.github/workflows/: ci.yml  integration-tests.yml  semver.yml  unit-tests.yml
integration_tests/: clean_up_tests.py  conftest.py  remove_test_buckets.py  s3_utils.py  setup_execution_data_file.py  setup_test_buckets.py  setup_tests.py  test_document_updates.py  test_ingest_stage.py  test_pipeline_bucket_state.py
integration_tests/data/: docs_test_subset.json
integration_tests/data/pipeline/parser_input/: TESTCCLW.executive.6.6.json  TESTCCLW.executive.7.7.json
integration_tests/data/pipeline_in/embeddings_input/: TESTCCLW.executive.4.4.json  TESTCCLW.executive.5.5.json
integration_tests/data/pipeline_in/execution_data/: 123456.json
integration_tests/data/pipeline_in/indexer_input/: TESTCCLW.executive.2.2.json
integration_tests/data/pipeline_in/ingest_unit_test_embeddings_input/: TESTCCLW.executive.1.1.json  TESTCCLW.executive.2.2.json  TESTCCLW.executive.3.3.json  TESTCCLW.executive.4.4.json  TESTCCLW.executive.5.5.json  TESTCCLW.executive.7.7.json
integration_tests/data/pipeline_in/ingest_unit_test_indexer_input/: TESTCCLW.executive.2.2.json  TESTCCLW.executive.3.3.json  TESTCCLW.executive.6.6.json
integration_tests/data/pipeline_in/ingest_unit_test_parser_input/: TESTCCLW.executive.1.1.json  TESTCCLW.executive.2.2.json  TESTCCLW.executive.4.4.json  TESTCCLW.executive.5.5.json
integration_tests/data/pipeline_in/input/: new_and_updated_documents.json
integration_tests/data/pipeline_in/input/2022-11-01T21.53.26.945831/: new_and_updated_documents.json
integration_tests/data/pipeline_in/parser_input/: TESTCCLW.executive.1.1.json  TESTCCLW.executive.2.2.json  TESTCCLW.executive.5.5.json
integration_tests/data/pipeline_out/embeddings_input/: TESTCCLW.executive.1.1.json  TESTCCLW.executive.2.2.json  TESTCCLW.executive.5.5.json
integration_tests/data/pipeline_out/execution_data/: 123456.json
integration_tests/data/pipeline_out/ingest_unit_test_embeddings_input/: TESTCCLW.executive.1.1.json  TESTCCLW.executive.2.2.json  TESTCCLW.executive.5.5.json  TESTCCLW.executive.7.7.json
integration_tests/data/pipeline_out/ingest_unit_test_indexer_input/: TESTCCLW.executive.2.2.json
integration_tests/data/pipeline_out/ingest_unit_test_parser_input/: TESTCCLW.executive.1.1.json  TESTCCLW.executive.1332.1547.json  TESTCCLW.executive.1332.1548.json  TESTCCLW.executive.1332.1549.json  TESTCCLW.executive.1332.1550.json  TESTCCLW.executive.1332.1551.json  TESTCCLW.executive.1332.1552.json  TESTCCLW.executive.1332.1553.json  TESTCCLW.executive.1332.1554.json  TESTCCLW.executive.1332.1555.json  TESTCCLW.executive.1332.1556.json  TESTCCLW.executive.1332.1557.json  TESTCCLW.executive.1332.1558.json  TESTCCLW.executive.1332.1559.json  TESTCCLW.executive.1332.1560.json  TESTCCLW.executive.1332.1562.json  TESTCCLW.executive.1332.1563.json  TESTCCLW.executive.2.2.json  TESTCCLW.executive.3.3.json  TESTCCLW.executive.4.4.json  TESTCCLW.executive.5.5.json  TESTCCLW.executive.6.6.json  TESTCCLW.executive.7.7.json
integration_tests/data/pipeline_out/input/: new_and_updated_documents.json  new_and_updated_documents.json_errors
integration_tests/data/pipeline_out/input/2022-11-01T21.53.26.945831/: new_and_updated_documents.json  new_and_updated_documents.json_errors
integration_tests/data/pipeline_out/parser_input/: TESTCCLW.executive.1332.1547.json  TESTCCLW.executive.1332.1548.json  TESTCCLW.executive.1332.1552.json  TESTCCLW.executive.1332.1556.json  TESTCCLW.executive.1332.1558.json  TESTCCLW.executive.1332.1559.json  TESTCCLW.executive.1332.1560.json  TESTCCLW.executive.1332.1562.json  TESTCCLW.executive.1332.1563.json  TESTCCLW.executive.2.2.json  TESTCCLW.executive.3.3.json  TESTCCLW.executive.4.4.json  TESTCCLW.executive.5.5.json
src/: main.py
src/base/: actions.py  api_client.py  types.py
src/navigator_data_ingest/: main.py  test_update_actions.py
src/navigator_data_ingest/base/: actions.py  api_client.py  doc_to_pdf_conversion.py  doc_to_pdf_transform.py  html_to_pdf_conversion.py  new_document_actions.py  pdf_conversion.py  types.py  updated_document_actions.py  utils.py
src/navigator_data_ingest/test/: conftest.py  test_update_actions.py
src/navigator_data_ingest/tests/: conftest.py  test_api_client.py  test_doc_to_pdf_conversion.py  test_integration.py  test_pdf_conversion.py  test_update_actions.py  test_utils.py  utils.py
src/navigator_data_ingest/tests/fixtures/: sampe-01-for-conversion.doc
src/navigator_data_ingest/tests/fixtures/small/: new_and_updated_documents.json
src/origins/cclw/: extract.py  load.py  transform.py
test/: clean_up_tests.py  s3_utils.py  setup_tests.py  test_ingest_output.py  test_ingest_stage.py  test_update_actions.py
test/data/: docs_test_single.json  docs_test_subset.json  docs_test_subset_archive_parser_input_expected.json  docs_test_subset_parser_input_expected.json
(+49 files in other folders)
