[tool.poetry]
name = "navigator-data-ingest"
version = "0.1.0"
description = "Downloads a given list of documents, then updates document data via API"
authors = ["CPR tech <tech@climatepolicyradar.org>"]
repository = "https://github.com/climatepolicyradar/navigator-data-ingest"
packages = [
    { include = "navigator_data_ingest", from = "src" },
]
license = "BSD-3-Clause"

[tool.poetry.scripts]
navigator-data-ingest = 'navigator_data_ingest.main:main'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
cloudpathlib = { version = "^0.10.0", extras = ["s3"] }
pydantic = "^2.4.0"
python-slugify = "^6.1.2"
python-dateutil = "^2.8.2"
python-dotenv = "^0.19.2"
requests = "^2.28.1"
tenacity = "^8.1.0"
json-logging = "^1.3.0"
pytest = "^7.2.1"
moto = {extras = ["all", "ec2", "s3"], version = "^4.1.6"}
pytest-asyncio = "^0.21.0"
cpr-data-access = {git = "https://github.com/climatepolicyradar/data-access.git", rev = "70efb64b2c1d526d1bf50801fe01609c9c89b79d"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
importlib-resources = "^5.6.0"
pre-commit = "^2.17.0"
pydocstyle = { version = "^6.1.1", extras = ["pydocstyle[toml]"] }
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
asyncio_mode = "strict"
markers = [
    "integration",
    "unit",
]

[tool.pydocstyle]
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D213 - Multi-line docstring summary should start at the second line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood (Google styleguide denotes 'descriptive' style.)
# D406 - Section name should end with a newline (incompatible with Google styleguide)
# D407 - Missing dashed underline after section (incompatible with Google styleguide)
# D413 - Missing blank line after last section (incompatible with Google styleguide)
# D415 - First line should end with a period, question mark, or exclamation point
ignore = """
D100,D103,D104,D107,
D202,D203,D212,
D400,D401,D406,D407,D413,D415
"""

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
per-file-ignores = "__init__.py:F401"

[tool.black]
line-length = 88
target-version = ['py39']
