[tool.poetry]
name = "navigator-data-ingest"
version = "0.1.0"
description = "Downloads a given list of documents, then updates document data via API"
authors = ["CPR tech <tech@climatepolicyradar.org>"]
repository = "https://github.com/climatepolicyradar/navigator-data-ingest"
packages = [
    { include = "navigator_data_ingest", from = "src" },
]
license = "BSD-3-Clause"

[tool.poetry.scripts]
navigator-data-ingest = 'navigator_data_ingest.main:main'

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"
cloudpathlib = { version = "^0.21.0", extras = ["s3"] }
pydantic = "^2.11.2"
python-slugify = "^8.0.4"
python-dateutil = "^2.9.0"
python-dotenv = "^1.1.0"
requests = "^2.28.1"
tenacity = "^9.1.2"
json-logging = "^1.3.0"
cpr-sdk = "^1.20.1"
pymupdf = "^1.25.5"
python-levenshtein = "^0.27.1"
playwright = "^1.52.0"
boto3 = ">=1.21.21,<2.0.0"

[tool.poetry.group.dev-dependencies.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
importlib-resources = "^6.5.2"
pre-commit = "^4.2.0"
pydocstyle = { version = "^6.1.1", extras = ["pydocstyle[toml]"] }
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
requests-mock = "^1.12.1"
moto = {extras = ["all", "ec2", "s3"], version = "^5.1.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
asyncio_mode = "strict"
markers = [
    "unit",
]

[tool.pydocstyle]
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D213 - Multi-line docstring summary should start at the second line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood (Google styleguide denotes 'descriptive' style.)
# D406 - Section name should end with a newline (incompatible with Google styleguide)
# D407 - Missing dashed underline after section (incompatible with Google styleguide)
# D413 - Missing blank line after last section (incompatible with Google styleguide)
# D415 - First line should end with a period, question mark, or exclamation point
ignore = """
D100,D103,D104,D107,
D202,D203,D212,
D400,D401,D406,D407,D413,D415
"""

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
per-file-ignores = "__init__.py:F401"

[tool.black]
line-length = 88
target-version = ['py39']
